<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"
    tools:ignore="MissingTranslation">
    <string name="app_name">WiFi Location Service</string>
    <string name="app_title">WiFi Location Service</string>
    <string name="summary">Locate using private on phone WiFi database</string>

    <!-- GPS preferences -->
    <string name="gps_config">GPS Setup</string>

    <string name="gps_accuracy">Required Accuracy</string>
    <string name="gps_accuracy_description">GPS error must be no more than (meters).</string>

    <string name="gps_min_distance">Sample distance</string>
    <string name="gps_min_distance_description">Minimum distance between GPS location samples (meters).</string>

    <string name="gps_min_time">Sample interval</string>
    <string name="gps_min_time_description">Time between GPS location samples (seconds).</string>

    <string name="gps_valid_time">GPS valid time</string>
    <string name="gps_valid_time_description">The time in which the last GPS signal is valid (seconds).</string>

    <!-- AP preferences -->
    <string name="ap_config">WiFi AP Assumptions</string>

    <string name="ap_min_range">Minimum AP range</string>
    <string name="ap_min_range_description">Minimum assumed range of an AP (meters).</string>

    <string name="ap_moved_range">Moved threshold</string>
    <string name="ap_moved_range_description">Maximum assumed range of an AP (meters).</string>

    <string name="ap_moved_guard">Move guard</string>
    <string name="ap_moved_guard_description">Samples at new location before a moved AP is trusted.</string>

    <string name="db_size_label">Number of known APs</string>

    <string name="db_change_label">Number of new or updated APs</string>

    <!-- Generic suffix strings -->
    <string name="pref_meters"><xliff:g id="number of meters" example="42">%s</xliff:g> meters</string>
    <string name="pref_seconds"><xliff:g id="number of seconds" example="42">%s</xliff:g> seconds</string>
    <string name="pref_samples"><xliff:g id="number of samples" example="42">%s</xliff:g> samples</string>
    <string name="statistic_records"><xliff:g id="number of APs" example="12">%1$d</xliff:g> APs</string>
    <string name="statistic_changed"><xliff:g id="number of new or updated APs" example="12">%1$d</xliff:g> APs</string>

    <string name="drawer_settings">Settings</string>
    <string name="drawer_advanced">Advanced</string>
    <string name="drawer_libraries">External libraries</string>
    <string name="drawer_website">Website</string>

    <string name="preference_grant_permission">Tap to grant the necessary location permission</string>

    <string name="title_wifi_list">WiFis</string>
    <string name="title_wifi_detail">WiFi Detail</string>

    <string name="wifi_detail_accuracy">Observed Range: %s</string>
    <string name="wifi_show_map">Show on map</string>

    <string name="data_export_all">Export all data</string>
    <string name="data_export_changed">Export changed data</string>
    <string name="data_export_error">Couldn\'t export data</string>

    <string name="data_import">Import data</string>
    <string name="data_import_error">Couldn\'t import data</string>

    <string name="wifi_list_seach_hint">Search (by SSID or RFID)</string>

    <string name="data_reset">Reset database</string>
    <string name="data_reset_warning">The database can only be restored if you created an backup before the deletion</string>
    <string name="data_reset_yes">Delete the data</string>
    <string name="data_reset_no">Keep the data</string>
</resources>
