<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="grant_permission"
        android:title="@string/preference_grant_permission" />

    <Preference
        android:key="db_size_preference"
        android:title="@string/db_size_label" />

    <Preference
        android:key="db_change_preference"
        android:title="@string/db_change_label" />

    <Preference
        android:enabled="@bool/is_kitkat_or_later"
        android:key="db_import"
        android:title="@string/data_import" />

    <Preference
        android:enabled="@bool/is_kitkat_or_later"
        android:key="db_export"
        android:title="@string/data_export" />
    <Preference
        android:enabled="@bool/is_kitkat_or_later"
        android:key="db_export_changed"
        android:title="@string/data_export_changed" />

</PreferenceScreen>