<LinearLayout
    android:id="@+id/container"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin"
    tools:context=".ui.data.WifiDetailFragment">

    <TextView
        android:textAppearance="?android:textAppearanceMedium"
        android:id="@+id/accuracy"
        android:text="@string/wifi_detail_accuracy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textAppearance="?android:textAppearanceMedium"
        android:id="@+id/samples"
        android:text="@string/pref_samples"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/wifi_show_map"
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
